Thursday, January 3, 2002	Ron Steinke <rsteinke@w-link.net>

	* Changed Barycenter() to take a container of Point<>
	  instead of an array, added BoundingBox() for a
	  container of AxisBox<>
	* Optimized special cases in AxisBox::getCorner() and
	  RotBox::getCorner(), got rid of AxisBox::lowCorner()
	  and AxisBox::highCorner()
	* Extended RotMatrix<> to allow for mirror image flips
	  in addition to rotations, added mirror() functions to
	  both RotMatrix<> and Vector<>
	* Removed foolish const from return value of
	  RotMatrix<>::rotation()
	* Wrote better member accessors for most shapes (there's
	  no reason not to have direct access to the members in
	  anything but AxisBox<>)
	* Inlined some of the simpler class member functions
	* Moved atlasconv.h from atlas/ into wfmath/, since we don't
	  need Atlas to install it, just to build the test code

Monday, December 31, 2001	Ron Steinke <rsteinke@w-link.net>

	* Added boundingSphere(), boundingSphereSloppy() to all
	  the shapes
	* Wrote FloatMin(), FloatMax(), and FloatClamp(). This
	  let me remove std::min() and std::max(), and with
	  them the dependency on <algorithm>
	* Cleaned up the inclusion of outside headers
	* Replaced double with CoordType everywhere, with the
	  exception of the precision/tolerance/epsilon arguments
	  of float comparison functions and the intenals of
	  IsFloatEqual()
	* Switched CoordType from double to float. This puts
	  the library precision at about 3e-6 (on my machine),
	  close to the precision of the strings being passed by
	  ToAtlas() and FromAtlas()
	* Replaced fromStream() with operator>>(), using fail()
	  flag to indicate a bad parse
	* Upped the version number from 0.0.1 to 0.1.0, as
	  the shape API appears to be settling down, and
	  it sure doesn't feel like 0.0 anymore

Monday, December 31, 2001	Ron Steinke <rsteinke@w-link.net>

	* Cleaned up string and stream stuff, classes only need
	  to include <iosfwd>, everything else is in stream.h/stream.cpp,